# EveStationTrader

./: .gitignore  AGENTS.md  DESIGN_PROMPT.md  DEVLOG.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml  test.db
backend/: Dockerfile  alembic.ini  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 20260320_0001_initial.py  20260323_0002_sync_job_progress_columns.py  20260325_0003_esi_history_sync_state.py  20260325_0004_remove_risk_fields.py  20260325_0005_adam_npc_demand_sync_state.py  20260326_0006_bulk_import_tracking.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/domain/: __init__.py  constants.py  enums.py  rules.py
backend/app/models/: __init__.py  all_models.py
backend/app/repositories/: seed_data.py  trade_repository.py
backend/app/services/: postgres_copy.py  settings_service.py
backend/eve_station_trader_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  db_test_utils.py  test_backend_entrypoint.py
backend/tests/api/: test_endpoints.py
backend/tests/domain/: test_rules.py
backend/tests/fixtures/: foundation_snapshot.json
backend/tests/services/: test_adam4eve_client.py  test_adam4eve_ingestion.py  test_aggregator.py  test_auth_service.py  test_bulk_imports.py  test_character_service.py  test_demand_resolver.py  test_esi_client.py  test_esi_history_ingestion.py  test_esi_orders_ingestion.py  test_foundation_data.py  test_foundation_import.py  test_market_demand.py  test_market_price_periods.py  test_opportunity_generation.py  (+5 more)
(+100 files in other folders)
