[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eve-station-trader"
version = "0.1.0"
description = "Hub-to-hub market opportunity scanner for EVE Online"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]
dependencies = []

[project.scripts]
eve-station-trader = "eve_station_trader.cli:main"
eve-station-trader-web = "eve_station_trader.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eve_station_trader = ["web_static/*.html", "web_static/*.js", "web_static/*.css"]
